--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "deferred",
     "async"
   ],
-  "main": "lib/common/main.js",
-  "module": "lib/esm/main.js",
-  "typings": "lib/types/main.d.ts",
+  "files": [
+    "lib",
+    "src",
+    "tests",
+    "tsconfig*.json"
+  ],
+  "source": "src/main.ts",
+  "main": "lib/main.js",
+  "module": "lib/main.module.js",
+  "unpkg": "lib/main.umd.js",
+  "typings": "lib/main.d.ts",
   "scripts": {
     "prepublishOnly": "node scripts/prepublish-checklist.js && npm run build",
-    "build": "rimraf lib && tsc && tsc -p tsconfig.common.json",
+    "build": "rimraf lib && microbundle --raw",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
-    "test": "jest --no-cache"
+    "test": "eslint . && jest --no-cache",
+    "watch": "microbundle watch"
   },
   "repository": {
     "type": "git",
@@ -22,11 +31,6 @@
   },
   "author": "WhiteTrefoil <whitetrefoil@gmail.com>",
   "license": "Unlicense",
-  "files": [
-    "lib/**/*.js",
-    "lib/types/**/*.d.ts",
-    "README.md"
-  ],
   "directories": {
     "test": "tests"
   },
@@ -35,15 +39,20 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^4.0.2",
-    "jest": "^26.0.1",
+    "@whitetrefoil/eslint-config": "^0.14.0",
+    "@types/jest": "^26.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^26.5.3",
+    "jest-environment-jsdom": "^26.5.2",
+    "jest-environment-jsdom-global": "^2.0.4",
+    "microbundle": "^0.12.4",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3"
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
   },
   "jest": {
     "collectCoverage": true,
@@ -62,8 +71,8 @@
     ],
     "globals": {
       "ts-jest": {
-        "tsConfig": "tests/tsconfig.json",
-        "babelConfig": false
+        "babelConfig": false,
+        "tsConfig": "tests/tsconfig.json"
       }
     },
     "moduleFileExtensions": [
@@ -76,6 +85,8 @@
     },
     "preset": "ts-jest",
     "setupFiles": [],
+    "testMatch": null,
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.[jt]sx?$",
     "transformIgnorePatterns": []
   }
 }
