--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@whitetrefoil/deferred",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "A clean & simple deferred implementation build upon existing `Promise` in global scope.",
   "keywords": [
     "promise",
@@ -13,17 +13,25 @@
     "tests",
     "tsconfig*.json"
   ],
+  "engines": {
+    "node": ">=12.17"
+  },
+  "type": "module",
   "source": "src/main.ts",
-  "main": "lib/main.js",
+  "main": "lib/main.cjs",
+  "exports": {
+    "import": "./lib/main.js",
+    "require": "./lib/main.cjs"
+  },
   "module": "lib/main.module.js",
-  "unpkg": "lib/main.umd.js",
+  "umd:main": "lib/main.umd.js",
   "typings": "lib/main.d.ts",
   "scripts": {
     "prepublishOnly": "node scripts/prepublish-checklist.js && npm run build",
-    "build": "rimraf lib && microbundle --raw",
+    "build": "rimraf lib && microbundle --raw --no-pkg-main -o lib/main.cjs -f cjs && microbundle --raw --no-pkg-main -o lib/main.js -f modern && microbundle --raw --no-pkg-main -o lib/main.module.js -f es && microbundle --raw --no-pkg-main -o lib/main.umd.js -f umd",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
     "test": "eslint . && jest --no-cache",
-    "watch": "microbundle watch"
+    "watch": "microbundle watch --raw --no-pkg-main -o lib/main.js -f modern"
   },
   "repository": {
     "type": "git",
@@ -39,20 +47,20 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@whitetrefoil/eslint-config": "^0.14.0",
-    "@types/jest": "^26.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "@whitetrefoil/eslint-config": "^0.20.1",
+    "eslint": "^7.25.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^26.5.3",
-    "jest-environment-jsdom": "^26.5.2",
+    "jest": "^26.6.3",
+    "jest-environment-jsdom": "^26.6.2",
     "jest-environment-jsdom-global": "^2.0.4",
-    "microbundle": "^0.12.4",
+    "microbundle": "^0.13.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
   },
   "jest": {
     "collectCoverage": true,
