--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tsconfig*.json"
   ],
   "engines": {
-    "node": ">=12.17"
+    "node": ">=14.8"
   },
   "type": "module",
   "source": "src/main.ts",
@@ -23,12 +23,9 @@
     "import": "./lib/main.js",
     "require": "./lib/main.cjs"
   },
-  "module": "lib/main.module.js",
-  "umd:main": "lib/main.umd.js",
-  "typings": "lib/main.d.ts",
   "scripts": {
     "prepublishOnly": "node scripts/prepublish-checklist.js && npm run build",
-    "build": "rimraf lib && microbundle --raw --no-pkg-main -o lib/main.cjs -f cjs && microbundle --raw --no-pkg-main -o lib/main.js -f modern && microbundle --raw --no-pkg-main -o lib/main.module.js -f es && microbundle --raw --no-pkg-main -o lib/main.umd.js -f umd",
+    "build": "rimraf lib && microbundle --raw -f modern,cjs",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
     "test": "eslint . && jest --no-cache",
     "watch": "microbundle watch --raw --no-pkg-main -o lib/main.js -f modern"
@@ -45,22 +42,21 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "@whitetrefoil/eslint-config": "^0.20.1",
-    "eslint": "^7.25.0",
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@whitetrefoil/eslint-config": "^0.22.0",
+    "eslint": "^8.4.1",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^26.6.3",
-    "jest-environment-jsdom": "^26.6.2",
-    "jest-environment-jsdom-global": "^2.0.4",
-    "microbundle": "^0.13.0",
+    "jest": "^27.4.3",
+    "jest-environment-jsdom": "^27.4.3",
+    "jest-environment-jsdom-global": "^3.0.0",
+    "microbundle": "^0.14.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "ts-jest": "^27.1.0",
+    "typescript": "^4.5.2"
   },
   "jest": {
     "collectCoverage": true,
@@ -96,5 +92,6 @@
     "testMatch": null,
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.[jt]sx?$",
     "transformIgnorePatterns": []
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
