--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@whitetrefoil/deferred",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "A clean & simple deferred implementation build upon existing `Promise` in global scope.",
   "keywords": [
-    "promise",
+    "async",
+    "defer",
     "deferred",
-    "async"
+    "promise"
   ],
   "files": [
     "lib",
@@ -13,19 +14,18 @@
     "tests",
     "tsconfig*.json"
   ],
-  "engines": {
-    "node": ">=14.8"
-  },
   "type": "module",
   "source": "src/main.ts",
-  "main": "lib/main.cjs",
+  "main": "lib/main.js",
   "exports": {
-    "import": "./lib/main.js",
-    "require": "./lib/main.cjs"
+    ".": {
+      "import": "./lib/main.js",
+      "require": "./lib/main.js"
+    }
   },
   "scripts": {
     "prepublishOnly": "node scripts/prepublish-checklist.js && npm run build",
-    "build": "rimraf lib && microbundle --raw -f modern,cjs",
+    "build": "rimraf lib && microbundle --raw -f modern",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
     "test": "eslint . && jest --no-cache",
     "watch": "microbundle watch --raw --no-pkg-main -o lib/main.js -f modern"
@@ -36,62 +36,27 @@
   },
   "author": "WhiteTrefoil <whitetrefoil@gmail.com>",
   "license": "Unlicense",
-  "directories": {
-    "test": "tests"
+  "engines": {
+    "node": ">=14.8"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@whitetrefoil/eslint-config": "^0.22.0",
-    "eslint": "^8.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "@whitetrefoil/eslint-config": "^0.24.1",
+    "eslint": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.4.3",
-    "jest-environment-jsdom": "^27.4.3",
+    "jest": "^27.4.5",
+    "jest-environment-jsdom": "^27.4.4",
     "jest-environment-jsdom-global": "^3.0.0",
     "microbundle": "^0.14.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.0",
-    "typescript": "^4.5.2"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{ts,js}",
-      "!**/*.d.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/~.*"
-    ],
-    "coverageDirectory": "test_results/jest",
-    "coverageReporters": [
-      "clover",
-      "lcov",
-      "text-summary"
-    ],
-    "globals": {
-      "ts-jest": {
-        "babelConfig": false,
-        "tsConfig": "tests/tsconfig.json"
-      }
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "moduleNameMapper": {
-      "^~/(.*)$": "<rootDir>/src/$1"
-    },
-    "preset": "ts-jest",
-    "setupFiles": [],
-    "testMatch": null,
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.[jt]sx?$",
-    "transformIgnorePatterns": []
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
   },
   "packageManager": "yarn@3.1.1"
 }
