--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,36 +2,42 @@
   "compileOnSave"  : false,
   "compilerOptions": {
     "allowJs"                       : true,
-    "baseUrl"                       : ".",
     "declaration"                   : true,
     "declarationDir"                : "lib",
     "emitDecoratorMetadata"         : true,
     "esModuleInterop"               : true,
     "experimentalDecorators"        : true,
-    "jsx"                           : "react",
     "importsNotUsedAsValues"        : "error",
     "inlineSourceMap"               : false,
     "inlineSources"                 : false,
-    "lib"                           : ["esnext", "dom"],
-    "module"                        : "esnext",
+    "lib"                           : [
+      "ES5",
+      "ES2015",
+      "ES2016",
+      "ES2017",
+      "ES2018",
+      "ES2019",
+      "ES2020",
+      "ESNext"
+    ],
+    "module"                        : "ESNext",
     "moduleResolution"              : "node",
+    "noImplicitOverride"            : true,
     "outDir"                        : "lib",
-    "paths"                         : {
-      "~/*": ["./src/*"]
-    },
     "skipDefaultLibCheck"           : true,
     "skipLibCheck"                  : true,
     "sourceMap"                     : true,
     "strict"                        : true,
     "suppressImplicitAnyIndexErrors": true,
-    "target"                        : "esnext"
+    "target"                        : "ESNext"
   },
   "include"        : [
     "src/**/*.ts",
     "src/**/*.js",
     "declarations/*.d.ts"
   ],
-  "exclude"        : [
-    "**/node_modules/**"
+  "exclude": [
+    "~*",
+    "_*"
   ]
 }
