--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
   ],
   "type": "module",
   "source": "src/main.ts",
+  "types": "lib/main.d.ts",
   "main": "lib/main.js",
   "exports": {
     ".": {
-      "import": "./lib/main.js",
-      "require": "./lib/main.js"
+      "types": "./lib/main.d.ts",
+      "default": "./lib/main.js"
     }
   },
   "scripts": {
-    "prepublishOnly": "node scripts/prepublish-checklist.js && npm run build",
-    "build": "rimraf lib && microbundle --raw -f modern",
+    "build": "rimraf lib && microbundle --raw --no-pkg-main -f modern -o lib/main.js --tsconfig src/tsconfig.json",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
-    "test": "eslint . && jest --no-cache",
-    "watch": "microbundle watch --raw --no-pkg-main -o lib/main.js -f modern"
+    "test": "rimraf test_results && eslint . ; jest --no-cache",
+    "test-ci": "rimraf test_results && eslint -o test_results/eslint/junit.xml -f junit . ; jest -i --no-cache",
+    "watch": "microbundle watch --raw --no-pkg-main -f modern -o lib/main.js --tsconfig src/tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -43,20 +44,20 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "@whitetrefoil/eslint-config": "^0.24.1",
-    "eslint": "^8.5.0",
+    "@types/jest": "^28.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "@whitetrefoil/eslint-config": "^0.27.0",
+    "eslint": "^8.17.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.4.5",
-    "jest-environment-jsdom": "^27.4.4",
-    "jest-environment-jsdom-global": "^3.0.0",
-    "microbundle": "^0.14.2",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-environment-jsdom-global": "^3.1.2",
+    "microbundle": "^0.15.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.3"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.1"
 }
