--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,21 @@
 {
   "compileOnSave"  : false,
   "compilerOptions": {
-    "allowJs"                       : true,
-    "declaration"                   : true,
-    "declarationDir"                : "lib",
+    "allowJs"                       : false,
     "emitDecoratorMetadata"         : true,
     "esModuleInterop"               : true,
     "experimentalDecorators"        : true,
     "importsNotUsedAsValues"        : "error",
     "inlineSourceMap"               : false,
     "inlineSources"                 : false,
-    "lib"                           : [
-      "ES5",
-      "ES2015",
-      "ES2016",
-      "ES2017",
-      "ES2018",
-      "ES2019",
-      "ES2020",
-      "ESNext"
-    ],
-    "module"                        : "ESNext",
-    "moduleResolution"              : "node",
+    "module"                        : "Node16",
+    "moduleResolution"              : "Node16",
+    "noEmit"                        : true,
     "noImplicitOverride"            : true,
+    "noImplicitReturns"             : true,
+    "noUncheckedIndexedAccess"      : true,
     "outDir"                        : "lib",
+    "resolveJsonModule"             : true,
     "skipDefaultLibCheck"           : true,
     "skipLibCheck"                  : true,
     "sourceMap"                     : true,
@@ -32,12 +24,13 @@
     "target"                        : "ESNext"
   },
   "include"        : [
-    "src/**/*.ts",
-    "src/**/*.js",
-    "declarations/*.d.ts"
+    "declarations/**/*",
+    "*"
   ],
-  "exclude": [
-    "~*",
-    "_*"
+  "exclude"        : [
+    "scripts/**/*.cjs",
+    "**/node_modules",
+    "**/.*",
+    "**/~*"
   ]
 }
